--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,3 +28,11 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+<script src="https://utteranc.es/client.js"
+        repo="compumaster/compumaster.github.io"
+        issue-term="pathname"
+        label="blog-comment"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
